# transcriber

./: .coverage-tmp.html  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
docker/: index.html
docs/: docker.md  index.md  modules.md  starting.md
getting-started/: index.html
helpers/: docker-run.sh
modules/: index.html
search/: search_index.json
src/transcriber/: __init__.py  transcribe.py
tests/: conftest.py  test_foo.py  test_transcribe.py
